--- a/package.json
+++ b/package.json
@@ -3,12 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/drei": "^9.80.0",
+    "@react-three/fiber": "^8.13.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/three": "^0.154.0",
     "react": "^18.2.0",
+    "react-3d-viewer": "^1.0.12",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-three-fiber": "^6.0.13",
+    "react-xr": "^1.1.0",
+    "three": "^0.154.0",
+    "three-gltf-loader": "^1.111.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
